# aphina

./: .env.example  Dockerfile.api  Dockerfile.bot  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py  models.py  proxies.txt  proxy_manager.py
app/api/: router.py
app/services/: ai_service.py  calorie_service.py  user_service.py
bot/: main.py  states.py  utils.py
bot/handlers/: auth.py  fallback.py  food.py  profile.py  progress.py  recipe.py
bot/keyboards/: keyboards.py
